--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,15 +23,18 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
+            android:padding="0dp"
             android:layout_gravity="left|top"
-            android:elevation="2dp">
+            android:elevation="2dp"
+            android:id="@+id/persistentSearch">
 
             <Button
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:background="@android:color/transparent"
                 android:id="@+id/nav_btn"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="15dp"
+                android:padding="0dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginBottom="16dp"
                 android:foregroundTint="@color/secondaryButton"
@@ -39,6 +42,7 @@
 
             <LinearLayout
                 android:focusable="true"
+                android:id="@+id/dummyItem"
                 android:focusableInTouchMode="true"
                 android:layout_width="0px"
                 android:layout_height="0px"/>
@@ -59,6 +63,17 @@
 
             <!-- TODO agregar microfonito y habla -->
         </LinearLayout>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="8dp"
+            android:src="@drawable/ic_my_location_black_24dp"
+            app:backgroundTint="@color/fabColor"
+            android:foregroundTint="@android:color/black"
+            app:fabSize="normal" />
 
         <RelativeLayout
             android:layout_width="match_parent"
