--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,38 +20,32 @@
             android:background="@color/searchBarColor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginRight="12dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginBottom="7dp"
             android:padding="0dp"
             android:layout_gravity="left|top"
             android:elevation="2dp"
             android:id="@+id/persistentSearch">
 
             <Button
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:background="@android:color/transparent"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
                 android:id="@+id/nav_btn"
-                android:layout_marginTop="15dp"
-                android:padding="0dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginBottom="16dp"
+                android:padding="12dp"
+                android:background="@android:color/transparent"
                 android:foregroundTint="@color/secondaryButton"
-                android:foreground="@drawable/ic_menu_black_24dp"/>
-
-            <LinearLayout
+                tools:foregroundInsidePadding="true"
                 android:focusable="true"
-                android:id="@+id/dummyItem"
                 android:focusableInTouchMode="true"
-                android:layout_width="0px"
-                android:layout_height="0px"/>
+                android:foreground="@drawable/ic_menu_black_24dp"/>
 
             <EditText
                 android:id="@+id/buscarTxt"
                 android:layout_marginBottom="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="40dp"
                 android:layout_marginRight="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="24dp"
@@ -69,7 +63,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:layout_margin="8dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             android:src="@drawable/ic_my_location_black_24dp"
             app:backgroundTint="@color/fabColor"
             android:foregroundTint="@android:color/black"
