--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,31 +24,27 @@
             android:layout_marginRight="12dp"
             android:layout_marginTop="7dp"
             android:layout_marginBottom="7dp"
-            android:padding="0dp"
             android:layout_gravity="left|top"
             android:elevation="2dp"
             android:id="@+id/persistentSearch">
 
             <Button
-                android:layout_width="56dp"
-                android:layout_height="56dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 android:id="@+id/nav_btn"
-                android:padding="12dp"
+                android:layout_margin="16dp"
                 android:background="@android:color/transparent"
                 android:foregroundTint="@color/secondaryButton"
-                tools:foregroundInsidePadding="true"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
                 android:foreground="@drawable/ic_menu_black_24dp"/>
 
             <EditText
                 android:id="@+id/buscarTxt"
-                android:layout_marginBottom="16dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginLeft="40dp"
-                android:layout_marginRight="16dp"
+                android:layout_marginLeft="20dp"
                 android:layout_width="match_parent"
-                android:layout_height="24dp"
+                android:textSize="32sp"
+                android:layout_height="match_parent"
                 android:hint="@string/buscar"
                 android:textColorHint="@color/hintColor"
                 android:background="@android:color/transparent"
