--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,8 +62,8 @@
             android:layout_marginRight="16dp"
             android:layout_marginBottom="16dp"
             android:src="@drawable/ic_my_location_black_24dp"
-            app:backgroundTint="@color/fabColor"
-            android:foregroundTint="@android:color/black"
+            android:tint="@color/fabTintNormal"
+            app:backgroundTint="@color/fabBackground"
             app:fabSize="normal" />
 
         <RelativeLayout
